...
    <string name="connectedPlayers">Connected Players</string>
    <string name="message">Message</string>
    <string name="time">Time</string>
    <string name="welcomeMessage">Welcome to Ticket To Ride</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="notRegisteredMessage">Not a User? Register Here</string>
    <string name="startGame">Start Game</string>
    <string name="chooseAColor">Choose a Color"</string>
    <string name="numberOfPlayers">Number of Players</string>
    <string name="register_greeting">Register Your Account</string>
    <string name="register_button">Register</string>
    <string name="register_username_field">Username</string>
    <string name="register_password_field">Password</string>
    <string name="register_confirm_password_field">Confirm Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_tab">Chat</string>
    <string name="game_history_tab">History</string>
    <string name="history_action">Action</string>
    <string name="return_these_tickets">Keep Selected Tickets</string>
    <string name="close">Close</string>
    <string name="use_these_cards">Use These Cards</string>
    <string name="claim_route_instructions">You must choose # cards</string>
    <string name="cannot_take_wild">You cannot take a Locomotive this time</string>
    <string name="cannot_use_this_card">You cannot use this card</string>
    <string name="passwords_dont_match">Passwords do not match!</string>
    <string name="invalid_login">Invalid Username or Password</string>
    <string name="repeat_register">This Username Already Exists</string>
    <string name="last_round">This is the last round of turns!</string>
    <string name="name_not_specified">Game Name not specified</string>
    <string name="winner">Winner</string>
    <string name="total_points">Total</string>
    <string name="routes">Routes</string>
    <string name="tickets">Tickets</string>
...
