...
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/authentication_fragment_container">

    </FrameLayout>
</android.support.constraint.ConstraintLayout>
