...
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/register_username_field"
        app:layout_constraintTop_toBottomOf="@+id/register_username_field" />

    <EditText
        android:id="@+id/register_conf_password_field"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/input_edit_text"
        android:hint="@string/register_confirm_password_field"
        android:inputType="textPassword"
...
