...
            app:layout_constraintHorizontal_bias="0.5" android:importantForAutofill="no"
            android:textColorHint="@color/silver" android:textColor="@color/black"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_password_edit_text"
            android:background="@drawable/authentication_button"/>
    <TextView
            android:text="@string/notRegisteredMessage"
...
